Adjusting these to aligh stretch instead of height 100%. Because the issue is with flex align this should be more targeted at that problem. Less room to affect other accordions. https://stellarwp.atlassian.net/browse/KAD-2841

--- a/src/blocks/accordion/editor.scss
+++ b/src/blocks/accordion/editor.scss
@@ -447,5 +447,5 @@ button.components-button.kt-accordion-add.is-primary {
 }
 
 .wp-block-kadence-column .wp-block-kadence-accordion {
-	width: 100%;
+	align-self: stretch;
 }
