--- a/src/blocks/accordion/style.scss
+++ b/src/blocks/accordion/style.scss
@@ -324,5 +324,5 @@
 }
 
 .wp-block-kadence-column .wp-block-kadence-accordion {
-	width: 100%;
+	align-self: stretch;
 }
